Give programs a clock, threads, processes and the rest of the network
Credits follow the processors with no ceiling; what bounds a tick is the
server's clock, per machine and per server, both in jstech-balance.toml,
and a machine the server had no time for goes first on the next tick.
Programs run threads, hold a lock, start other programs with arguments,
wait on them, read their output and send them lines. Computers on one
network share folders, reached as \\host\share at the prompt, through
File and in the explorer's Network node. A program can reach the other
computers of its network and speak IQL. The reference is docs/CANNON.md.